--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="../public/css/style.css">
-    <script src="../public/js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
 </head>
 <body>
     
@@ -30,7 +30,7 @@
 
         <button onclick="girarRoleta()">GIRAR!</button>
         <br><br>
-        <a href="login.html">Área Administrativa (Cadastrar Itens)</a>
+        <a href="admin.html">Área Administrativa (Cadastrar Itens)</a>
     </div>
 
 </body>
