--- a/public/admin.html
+++ b/public/admin.html
@@ -24,7 +24,7 @@
         <a href="index.html">← Voltar para o Cassino</a>
     </div>
 
-    <div class="container escondido" id="tela-gestao">
+    <div class="container" id="tela-gestao">
         <div class="header-admin">
             <h1>🛠️ Gerenciar Acervo</h1>
             <button onclick="sair()" class="btn-sair">Sair</button>
